<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/settings"
        android:orderInCategory="10"
        android:id="@+id/m2" />
    <item
        android:id="@+id/m1"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/search"

        app:showAsAction="ifRoom" tools:targetApi="lollipop"/>
    <item
        android:title="@string/prev_page"
        android:orderInCategory="8"
        app:showAsAction="never"
        android:id="@+id/m3" />

    <item
        android:title="@string/next_page"
        android:orderInCategory="9"
        app:showAsAction="never"
        android:id="@+id/m4" />


</menu>