<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workspace"
    tools:context=".InputChecks">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ui_inputs_check"
        android:textColor="@color/colorYellow"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:textSize="30sp"
            android:background="@color/lightGreen"
            android:textColor="@color/colorWhile"
            android:text="@string/english" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@color/lightGreen"
            android:textSize="30sp"
            android:text="@string/tamil"
            android:textColor="@color/colorWhile" />

    </LinearLayout>


    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/darkYellow"
        android:layout_marginTop="345dp"
        android:layout_marginStart="70dp" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorWhile"
                android:textSize="30sp"
                android:onClick="radioclick"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:onClick="radioclick"
                android:textSize="30sp"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="150dp"
                android:textColor="@color/colorWhile"
                android:text="@string/female" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="420dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <Button
            android:id="@+id/dialogbtn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:onClick="dialog"
            android:text="@string/dialog"
            android:textSize="22sp"
            android:textColor="@color/darkYellow"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/lightBlue"/>


        <Button
            android:id="@+id/alertdialogbtn"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:onClick="alertDialog"
            android:textColor="@color/darkYellow"
            android:layout_marginStart="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/lightBlue"
            android:text="@string/alertdialog" />

    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textSize="24sp"
        android:text="@string/on"
        android:focusable="true" />

</RelativeLayout>