<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    tools:context=".ImplicitIntent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="55dp"
        android:text="@string/implicit_intent" />

    <Button
        android:id="@+id/IMI_browser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_browser"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="IMI_OnClick"
        android:background="@color/lightBlue"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/IMI_call"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_call"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/colorYellow"
        android:onClick="IMI_OnClick"
        android:background="@color/lightBlue"
        android:layout_marginTop="220dp" />

    <Button
        android:id="@+id/IMI_map"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_Map"
        android:textSize="18sp"
        android:textColor="@color/colorYellow"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/lightBlue"
        android:onClick="IMI_OnClick"
        android:layout_marginTop="290dp" />


    <Button
        android:id="@+id/nxtpg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/next_page"
        android:textSize="18sp"
        android:textColor="@color/colorYellow"
        android:layout_marginStart="120dp"
        android:background="@color/lightBlue"
        android:onClick="IMI_nextpage"
        android:layout_marginTop="400dp" />

</RelativeLayout>