<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    tools:context=".IntentActivity">

    /*  simple text view    */
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/intent_s_activity"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/IA_inputtext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_any_name"
        android:inputType=""
        android:textSize="22sp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/IA_newPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:freezesText="true"
        android:text="@string/next_page"
        android:textColor="@color/lightRed"
        android:textSize="28sp"
        android:visibility="visible" />

</RelativeLayout>
